--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -27,6 +27,12 @@
             Modelos
           </a>
           <a
+            class="menu-item <%= activeMenu === 'integrations' ? 'active' : '' %>"
+            href="/integraciones"
+          >
+            Integraciones API
+          </a>
+          <a
             class="menu-item <%= activeMenu === 'files-manage' ? 'active' : '' %>"
             href="/archivos/gestionar"
           >
